--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,11 +1,13 @@
 /* everything to do with the header*/
 header {
     height: 100px;
+    width: 100%;
     background-color: white;
     border-bottom: 2px solid #cccccc;
     text-align: center;
 }
 
+/* The is the blue box that has my name inside the header */
 #nameSection {
     position: relative;
     margin-left: 50%;
@@ -14,7 +16,7 @@ header {
     height: 100px;
     background-color: #4aaaa5;
 }
-
+/* This is the text inside name box located within the headerß */
 #nameText {
     position: absolute;
     top: 10px;
@@ -23,22 +25,21 @@ header {
     color: white;
 }
 
+/* This is a box containing all link elemnts inside */
 #linkSections {
     display: inline-block;
-    position: relative;
-    top: -60px;
-    left: 510px;
+    position: absolute;
+    top: 40px;
+    left: 940px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 21px;
     color: #777777;
 }
-
 #link-about {
     float: left;
     width: 100px;
     border-right: 2px solid #cccccc;
 }
-
 #link-portfolio {
     position: relative;
     right: 0px;
@@ -46,12 +47,10 @@ header {
     width: 100px;
     border-right: 2px solid #cccccc;
 }
-
 #link-contact {
     float: left;
     margin-left: 10px
 }
-
 a:link, a:visited {
     color: #777777;
     text-decoration: none;
