--- a/Assets/style.css
+++ b/Assets/style.css
@@ -25,7 +25,7 @@ header {
     color: white;
 }
 
-/* This is a box containing all link elemnts inside */
+/* This is a box containing all link elemnts inside (28-62)*/
 #linkSections {
     display: inline-block;
     position: absolute;
@@ -70,6 +70,7 @@ body {
     text-align: center;
 }
 
+/* This is everyting inside the page contect div */
 #mainBox {
     display: inline-block;
     width: 960px;
@@ -95,13 +96,27 @@ body {
     margin-right: 20px;
 }
 
-p {
+p, article {
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 21px;
 }
 
 /*Everything to do with the footer*/
+/* RM---->(sticky footer)
+footer {
+    position: fixed;
+    height: 75px;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    background-color: gray;
+}
+*/
+
+/* test footer */
 html, body {
     height: 100%;
     margin: 0;
@@ -119,7 +134,6 @@ footer, .pageContent::after {
     background-color: #666666;
     border-top: 8px solid #4aaaa5;
 }
-
 
 /* Classes */
 
@@ -160,6 +174,14 @@ footer, .pageContent::after {
     background-color: white;
 }
 
+::placeholder {
+     opacity: .4;
+}
+
+text {
+    padding-right: 10px; 
+}
+
 textarea {
     width: 100%;
     height: 200px;
@@ -185,6 +207,7 @@ textarea {
     cursor: pointer;
     background-color: #439793;
 }
+
 
 /* everything regarding portfolio.html */
 
