--- a/Assets/style.css
+++ b/Assets/style.css
@@ -103,8 +103,8 @@ p, article {
 }
 
 /*Everything to do with the footer*/
-/* RM---->(sticky footer)
 footer {
+    text-align: center;
     position: fixed;
     height: 75px;
     width: 100%;
@@ -112,9 +112,13 @@ footer {
     left: 0;
     margin: 0;
     padding: 0;
-    background-color: gray;
+    background-color: #666666;
+    border-top: 8px solid #439793;
+
+    /* copyright text in the footer */
+    color: #a5a5a5;
 }
-*/
+
 
 /* test footer */
 html, body {
@@ -125,7 +129,9 @@ html, body {
     min-height: 100%;
     margin-bottom: 75px;
 }
-.pageContent::after {
+
+/* Test stuff (keeping for future referance) */
+/* .pageContent::after {
     content: "";
     display: black;
 }
@@ -133,7 +139,8 @@ footer, .pageContent::after {
     height: 75px;
     background-color: #666666;
     border-top: 8px solid #4aaaa5;
-}
+} */
+
 
 /* Classes */
 
@@ -187,6 +194,7 @@ textarea {
     height: 200px;
     font-size: 15px;
     margin-top: 6px;
+    resize: none;
 }
 
 #contactSubmit {
@@ -217,4 +225,68 @@ textarea {
     padding: 30px;
     width: 960px;
     background-color: white;
+}
+
+/* table in portfolio.html */
+table {
+    border: none;
+    width: 100%;
+}
+
+th, td {
+    text-align: left;
+    padding-bottom: 30px;
+}
+
+/* Images on the table in order left to right */
+#tableImg1 {
+    background-image: url(../Assets/images/hangman.jpg);
+    width: 230px;
+    height: 230px;
+    display: table-cell;
+}
+
+#tableImg2 {
+    background-image: url(../Assets/images/RPGgame.jpeg);
+    width: 230px;
+    height: 230px;
+    display: table-cell;
+}
+
+#tableImg3 {
+    background-image: url(../Assets/images/Trivia.jpg);
+    width: 230px;
+    height: 230px;
+    display: table-cell;
+}
+
+#tableImg4 {
+    background-image: url(../Assets/images/widget.jpg);
+    width: 230px;
+    height: 230px;
+    display: table-cell;
+}
+
+#tableImg5 {
+    background-image: url(../Assets/images/RPS.jpg);
+    width: 230px;
+    height: 230px;
+    display: table-cell;
+}
+
+.tableTextBox{
+    width: 100%;
+    height: 50px;
+    background-color: #4aaaa5;
+    position: relative;
+    top: 130px;
+    border-radius: 3px;
+}
+
+.tableText {
+    color: white;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    vertical-align: middle;
+    text-align: center;
+    line-height: 50px;
 }
