--- a/Assets/style.css
+++ b/Assets/style.css
@@ -227,10 +227,20 @@ textarea {
     background-color: white;
 }
 
+#mainBoxContentPortfolio {
+    text-align: left;
+    margin-top: 20px;
+
+    /* put here so img doesnt move when hovered over */
+    position: relative;
+    left: 2px;
+    top: 2px;
+}
+
 /* table in portfolio.html */
 table {
     border: none;
-    width: 100%;
+    width: 60%;
 }
 
 th, td {
@@ -238,55 +248,96 @@ th, td {
     padding-bottom: 30px;
 }
 
+th {
+    position: relative;
+    left: 2px;
+}
+tr {
+    position: relative;
+    top: 2px;
+}
+
 /* Images on the table in order left to right */
 #tableImg1 {
     background-image: url(../Assets/images/hangman.jpg);
-    width: 230px;
-    height: 230px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    width: 170px;
+    height: 170px;
     display: table-cell;
+    -moz-transition-duration: 0.3s;
+    transition-duration: 0.3s;
 }
 
 #tableImg2 {
     background-image: url(../Assets/images/RPGgame.jpeg);
-    width: 230px;
-    height: 230px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    width: 170px;
+    height: 170px;
     display: table-cell;
+    -moz-transition-duration: 0.3s;
+    transition-duration: 0.3s;
 }
 
 #tableImg3 {
     background-image: url(../Assets/images/Trivia.jpg);
-    width: 230px;
-    height: 230px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    width: 170px;
+    height: 170px;
     display: table-cell;
+    -moz-transition-duration: 0.3s;
+    transition-duration: 0.3s;
 }
 
 #tableImg4 {
     background-image: url(../Assets/images/widget.jpg);
-    width: 230px;
-    height: 230px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    width: 170px;
+    height: 170px;
     display: table-cell;
+    -moz-transition-duration: 0.3s;
+    transition-duration: 0.3s;
 }
 
 #tableImg5 {
     background-image: url(../Assets/images/RPS.jpg);
-    width: 230px;
-    height: 230px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    width: 170px;
+    height: 170px;
     display: table-cell;
+    -moz-transition-duration: 0.3s;
+    transition-duration: 0.3s;
 }
 
-.tableTextBox{
+/* creates a border when hovered over */
+#tableImg1:hover, #tableImg2:hover, #tableImg3:hover, #tableImg4:hover, #tableImg5:hover {
+    border: 5px solid #439793;
+    display: table-cell;
+    width: 160px;
+    height: 160px;
+}
+
+
+.tableTextBox {
     width: 100%;
-    height: 50px;
+    height: 40px;
     background-color: #4aaaa5;
     position: relative;
-    top: 130px;
+    top: 80px;
     border-radius: 3px;
+    -moz-transition-duration: none;
+    transition-duration: none;
 }
 
 .tableText {
+    font-size: 15px;
     color: white;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     vertical-align: middle;
     text-align: center;
-    line-height: 50px;
+    line-height: 40px;
 }
